Implement dynamic motor selection based on signal input - Enhanced SignalReceiver to parse multiple samples per call - Added threshold-based decision for servo motor (SERVO_L vs SERVO_R) - Final output formatted as "<v1>|<v2>|...| <servo_id>" - Improved fallback handling for unparsable data - Detailed Javadoc added for signalValuePerSecondWithSetBandWidth()

--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,21 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+
 }
+
+
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    implementation 'com.fazecast:jSerialComm:2.11.2'
+
+
+
 }
+
 
 test {
     useJUnitPlatform()
