docs(transmitter): add class-level Javadoc and author attribution feat(transmitter): improve input validation and line splitting robustness refactor(transmitter): use StandardCharsets.UTF_8 instead of raw string encoding fix(transmitter): skip blank lines during transmission to reduce noise log(transmitter): enhanced error logging with formatted output
refactor(transmitter): add Javadoc, improve input handling, and enhance logging

- Documented class and methods with Javadoc including author name
- Validated input stream and ignored blank lines gracefully
- Replaced raw UTF-8 string encoding with StandardCharsets constant
- Improved exception logging with formatted messages

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     implementation 'com.fazecast:jSerialComm:2.11.2'
-
+    implementation 'com.github.kwhat:jnativehook:2.2.2'
 
 
 }
